<?xml version="1.0" encoding="UTF-8"?>
<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13196" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="Mpr-bW-yLh">
    <device id="ipad9_7" orientation="landscape">
        <adaptation id="fullscreen"/>
    </device>
    <dependencies>
        <deployment identifier="iOS"/>
        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13173"/>
        <capability name="Navigation items with more than one left or right bar item" minToolsVersion="7.0"/>
        <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
    </dependencies>
    <scenes>
        <!--Main View Controller-->
        <scene sceneID="tne-QT-ifu">
            <objects>
                <viewController storyboardIdentifier="XFMainViewController" useStoryboardIdentifierAsRestorationIdentifier="YES" id="BYZ-38-t0r" customClass="XFMainViewController" customModule="xFixes" customModuleProvider="target" sceneMemberID="viewController">
                    <layoutGuides>
                        <viewControllerLayoutGuide type="top" id="y3c-jy-aDJ"/>
                        <viewControllerLayoutGuide type="bottom" id="wfy-db-euE"/>
                    </layoutGuides>
                    <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                        <rect key="frame" x="0.0" y="0.0" width="1024" height="768"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                    </view>
                    <navigationItem key="navigationItem" id="5cV-Gp-JgH">
                        <rightBarButtonItems>
                            <barButtonItem systemItem="trash" id="Zw2-ch-BH7">
                                <connections>
                                    <action selector="RemovAllButton:" destination="BYZ-38-t0r" id="beF-Xy-kOF"/>
                                </connections>
                            </barButtonItem>
                            <barButtonItem title="1:1" id="lnW-L9-gzq">
                                <connections>
                                    <action selector="resetZoomButton:" destination="BYZ-38-t0r" id="XKC-RA-nvV"/>
                                </connections>
                            </barButtonItem>
                        </rightBarButtonItems>
                    </navigationItem>
                </viewController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
            </objects>
            <point key="canvasLocation" x="1249.8046875" y="1119.53125"/>
        </scene>
        <!--Project View Controller-->
        <scene sceneID="Qcd-1V-mc6">
            <objects>
                <viewController id="mfN-pg-cil" customClass="XFProjectViewController" customModule="xFixes" customModuleProvider="target" sceneMemberID="viewController">
                    <collectionView key="view" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" id="p1n-HD-IBb">
                        <rect key="frame" x="0.0" y="0.0" width="1024" height="768"/>
                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                        <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="eW1-rj-ygK">
                            <size key="itemSize" width="50" height="50"/>
                            <size key="headerReferenceSize" width="0.0" height="0.0"/>
                            <size key="footerReferenceSize" width="0.0" height="0.0"/>
                            <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
                        </collectionViewFlowLayout>
                        <cells>
                            <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="Cell" id="PNR-vf-5Ot">
                                <rect key="frame" x="0.0" y="0.0" width="50" height="50"/>
                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
                                    <rect key="frame" x="0.0" y="0.0" width="50" height="50"/>
                                    <autoresizingMask key="autoresizingMask"/>
                                </view>
                            </collectionViewCell>
                        </cells>
                    </collectionView>
                    <navigationItem key="navigationItem" id="7Kz-ur-PlC">
                        <barButtonItem key="leftBarButtonItem" systemItem="add" id="Ygv-ka-Bb9">
                            <connections>
                                <action selector="addProjectButton:" destination="mfN-pg-cil" id="3cn-07-iQh"/>
                            </connections>
                        </barButtonItem>
                    </navigationItem>
                    <connections>
                        <segue destination="ffK-sO-NXF" kind="show" identifier="ShowMain" id="iD8-uK-P3T"/>
                    </connections>
                </viewController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="gtB-Zr-Gac" userLabel="First Responder" sceneMemberID="firstResponder"/>
            </objects>
            <point key="canvasLocation" x="526" y="248"/>
        </scene>
        <!--Login View Controller-->
        <scene sceneID="9wp-IH-xgV">
            <objects>
                <viewController id="rjl-gl-rxl" customClass="XFLoginViewController" customModule="xFixes" customModuleProvider="target" sceneMemberID="viewController">
                    <layoutGuides>
                        <viewControllerLayoutGuide type="top" id="tjw-vk-Jas"/>
                        <viewControllerLayoutGuide type="bottom" id="a0M-JL-fWq"/>
                    </layoutGuides>
                    <view key="view" contentMode="scaleToFill" id="xuH-JP-cLD">
                        <rect key="frame" x="0.0" y="0.0" width="1024" height="768"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="2fs-lo-aWu">
                                <rect key="frame" x="407" y="272" width="211" height="36"/>
                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                <fontDescription key="fontDescription" type="system" pointSize="27"/>
                                <state key="normal" title="Login"/>
                                <connections>
                                    <action selector="loginButton:" destination="rjl-gl-rxl" eventType="touchUpInside" id="Grj-O2-mCO"/>
                                </connections>
                            </button>
                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Username" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="LEu-bJ-uQa">
                                <rect key="frame" x="407" y="196" width="211" height="30"/>
                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                <accessibility key="accessibilityConfiguration" identifier="usernameLabel"/>
                                <nil key="textColor"/>
                                <fontDescription key="fontDescription" type="system" pointSize="18"/>
                                <textInputTraits key="textInputTraits"/>
                            </textField>
                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Password" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="5R6-ZG-wiX">
                                <rect key="frame" x="407" y="234" width="211" height="30"/>
                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                <accessibility key="accessibilityConfiguration" identifier="passwordLabel"/>
                                <nil key="textColor"/>
                                <fontDescription key="fontDescription" type="system" pointSize="18"/>
                                <textInputTraits key="textInputTraits" secureTextEntry="YES"/>
                            </textField>
                            <label opaque="NO" userInteractionEnabled="NO" alpha="0.89999997615814209" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="xFixes" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Fe2-lb-cuJ">
                                <rect key="frame" x="311" y="105" width="402" height="83"/>
                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                <fontDescription key="fontDescription" type="system" pointSize="64"/>
                                <color key="textColor" red="0.0" green="0.47843137250000001" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                <color key="highlightedColor" red="0.0" green="0.47843137250000001" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                            </label>
                        </subviews>
                    </view>
                    <connections>
                        <outlet property="passwordLabel" destination="5R6-ZG-wiX" id="mmE-qW-ndr"/>
                        <outlet property="usernameLabel" destination="LEu-bJ-uQa" id="aII-Jl-Z2p"/>
                        <segue destination="Mpr-bW-yLh" kind="show" identifier="LoginSegue" id="NXn-ug-kit"/>
                    </connections>
                </viewController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="BeA-Q8-BOP" userLabel="First Responder" sceneMemberID="firstResponder"/>
            </objects>
            <point key="canvasLocation" x="-618.1640625" y="-480.46875"/>
        </scene>
        <!--Navigation Controller-->
        <scene sceneID="SWg-pm-cVI">
            <objects>
                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="Mpr-bW-yLh" sceneMemberID="viewController">
                    <toolbarItems/>
                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="xtT-RJ-Q5M">
                        <rect key="frame" x="0.0" y="20" width="1024" height="44"/>
                        <autoresizingMask key="autoresizingMask"/>
                    </navigationBar>
                    <nil name="viewControllers"/>
                    <connections>
                        <segue destination="mfN-pg-cil" kind="relationship" relationship="rootViewController" id="PHe-O4-Qbw"/>
                    </connections>
                </navigationController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="EtO-wd-fPP" userLabel="First Responder" sceneMemberID="firstResponder"/>
            </objects>
            <point key="canvasLocation" x="526" y="-480"/>
        </scene>
        <!--Navigation Controller-->
        <scene sceneID="qs9-VJ-4Pv">
            <objects>
                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="ffK-sO-NXF" sceneMemberID="viewController">
                    <toolbarItems/>
                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="D3u-dK-oLL">
                        <rect key="frame" x="0.0" y="20" width="1024" height="44"/>
                        <autoresizingMask key="autoresizingMask"/>
                    </navigationBar>
                    <nil name="viewControllers"/>
                    <connections>
                        <segue destination="BYZ-38-t0r" kind="relationship" relationship="rootViewController" id="PLA-qg-Qoo"/>
                    </connections>
                </navigationController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="Dle-aB-ZPV" userLabel="First Responder" sceneMemberID="firstResponder"/>
            </objects>
            <point key="canvasLocation" x="525.5859375" y="1119.53125"/>
        </scene>
    </scenes>
</document>
